// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListCustomObject renders with data and hit actions 1`] = `
<DocumentFragment>
  <div
    class="tools-control-group"
  >
    <div
      class="control-menu-level-1-heading"
    >
      javax.portlet.title.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet
    </div>
  </div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link btn btn-unstyled"
              style=""
              type="button"
            >
              <span
                class="navbar-breakpoint-down-d-none"
              >
                filter-and-order
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#caret-bottom"
                  />
                </svg>
              </span>
              <span
                class="navbar-breakpoint-d-none"
              >
                <svg
                  class="lexicon-icon lexicon-icon-filter inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#filter"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-down-active btn btn-monospaced btn-unstyled"
            data-title="reverse-sort-direction"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="search"
                  class="form-control input-group-inset input-group-inset-after"
                  placeholder="search..."
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="#search"
              />
            </svg>
          </button>
        </li>
        <li
          class="nav-item"
        >
          <div>
            <button
              class="nav-btn nav-btn-monospaced btn btn-monospaced btn-primary"
              data-title="new-custom-object"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <div>
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit table-list"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class="table-cell-expand text-left"
              >
                name
              </th>
              <th
                class="table-cell-expand-smaller text-left"
              >
                create-date
              </th>
              <th
                class="table-cell-expand-smaller text-left"
              >
                modified-date
              </th>
              <th
                class=""
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="table-cell-expand text-left"
              >
                <p
                  class="table-list-title"
                >
                  <a
                    href="#/custom-object/1/form-views"
                  />
                </p>
              </td>
              <td
                class="table-cell-expand-smaller text-left"
              >
                4 hours ago
              </td>
              <td
                class="table-cell-expand-smaller text-left"
              >
                4 hours ago
              </td>
              <td
                class=""
              >
                <div
                  class="dropdown dropdown-action"
                >
                  <button
                    class="dropdown-toggle page-link btn btn-unstyled"
                    style=""
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-ellipsis-v"
                      role="presentation"
                    >
                      <use
                        xlink:href="#ellipsis-v"
                      />
                    </svg>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="popover undefined mw-100 hide"
  >
    <div
      class="arrow"
    />
    <div
      class="border-0 popover-header"
    >
      <h4
        class="m-0"
      >
        new-custom-object
      </h4>
    </div>
    <div
      class="popover-body"
    >
      <form>
        <div
          class="form-group  mb-2"
        >
          <label
            for="customObjectNameInput"
          >
            name
            <span
              class="reference-mark"
            >
              <svg
                class="lexicon-icon lexicon-icon-asterisk"
                role="presentation"
              >
                <use
                  xlink:href="#asterisk"
                />
              </svg>
            </span>
          </label>
          <input
            class="form-control form-control"
            id="customObjectNameInput"
            type="text"
          />
        </div>
        <div
          class="custom-control custom-checkbox"
        >
          <label>
            <input
              aria-label="continue-and-create-form-view"
              checked=""
              class="custom-control-input"
              type="checkbox"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                continue-and-create-form-view
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="popover-footer"
    >
      <div
        class="border-top p-3"
        style="width: 450px;"
      >
        <div
          class="d-flex justify-content-end"
        >
          <button
            class="mr-3 btn btn-sm btn-secondary"
            type="button"
          >
            cancel
          </button>
          <button
            class="btn btn-sm btn-primary"
            type="button"
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListCustomObject renders with data and remove item 1`] = `
<DocumentFragment>
  <div
    class="tools-control-group"
  >
    <div
      class="control-menu-level-1-heading"
    >
      javax.portlet.title.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet
    </div>
  </div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link btn btn-unstyled"
              disabled=""
              style=""
              type="button"
            >
              <span
                class="navbar-breakpoint-down-d-none"
              >
                filter-and-order
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#caret-bottom"
                  />
                </svg>
              </span>
              <span
                class="navbar-breakpoint-d-none"
              >
                <svg
                  class="lexicon-icon lexicon-icon-filter inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#filter"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-down-active btn btn-monospaced btn-unstyled"
            data-title="reverse-sort-direction"
            disabled=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="search"
                  class="form-control input-group-inset input-group-inset-after"
                  disabled=""
                  placeholder="search..."
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="#search"
              />
            </svg>
          </button>
        </li>
        <li
          class="nav-item"
        >
          <div>
            <button
              class="nav-btn nav-btn-monospaced btn btn-monospaced btn-primary"
              data-title="new-custom-object"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="taglib-empty-result-message"
  >
    <div
      class="text-center"
    >
      <div
        class="taglib-empty-state"
      />
      <h1
        class="taglib-empty-result-message-title"
      >
        there-are-no-custom-objects-yet
      </h1>
      <p
        class="empty-message-color taglib-empty-result-message-description"
      >
        custom-objects-define-the-types-of-data-your-business-application-needs
      </p>
      <button
        class="btn btn-secondary"
        type="button"
      >
        new-custom-object
      </button>
    </div>
  </div>
  <div
    class="popover undefined mw-100 hide"
  >
    <div
      class="arrow"
    />
    <div
      class="border-0 popover-header"
    >
      <h4
        class="m-0"
      >
        new-custom-object
      </h4>
    </div>
    <div
      class="popover-body"
    >
      <form>
        <div
          class="form-group  mb-2"
        >
          <label
            for="customObjectNameInput"
          >
            name
            <span
              class="reference-mark"
            >
              <svg
                class="lexicon-icon lexicon-icon-asterisk"
                role="presentation"
              >
                <use
                  xlink:href="#asterisk"
                />
              </svg>
            </span>
          </label>
          <input
            class="form-control form-control"
            id="customObjectNameInput"
            type="text"
          />
        </div>
        <div
          class="custom-control custom-checkbox"
        >
          <label>
            <input
              aria-label="continue-and-create-form-view"
              checked=""
              class="custom-control-input"
              type="checkbox"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                continue-and-create-form-view
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="popover-footer"
    >
      <div
        class="border-top p-3"
        style="width: 450px;"
      >
        <div
          class="d-flex justify-content-end"
        >
          <button
            class="mr-3 btn btn-sm btn-secondary"
            type="button"
          >
            cancel
          </button>
          <button
            class="btn btn-sm btn-primary"
            type="button"
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListCustomObject renders with data and update item permission 1`] = `
<DocumentFragment>
  <div
    class="tools-control-group"
  >
    <div
      class="control-menu-level-1-heading"
    >
      javax.portlet.title.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet
    </div>
  </div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link btn btn-unstyled"
              style=""
              type="button"
            >
              <span
                class="navbar-breakpoint-down-d-none"
              >
                filter-and-order
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#caret-bottom"
                  />
                </svg>
              </span>
              <span
                class="navbar-breakpoint-d-none"
              >
                <svg
                  class="lexicon-icon lexicon-icon-filter inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#filter"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-down-active btn btn-monospaced btn-unstyled"
            data-title="reverse-sort-direction"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="search"
                  class="form-control input-group-inset input-group-inset-after"
                  placeholder="search..."
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="#search"
              />
            </svg>
          </button>
        </li>
        <li
          class="nav-item"
        >
          <div>
            <button
              class="nav-btn nav-btn-monospaced btn btn-monospaced btn-primary"
              data-title="new-custom-object"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <div>
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit table-list"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class="table-cell-expand text-left"
              >
                name
              </th>
              <th
                class="table-cell-expand-smaller text-left"
              >
                create-date
              </th>
              <th
                class="table-cell-expand-smaller text-left"
              >
                modified-date
              </th>
              <th
                class=""
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="table-cell-expand text-left"
              >
                <p
                  class="table-list-title"
                >
                  <a
                    href="#/custom-object/1/form-views"
                  />
                </p>
              </td>
              <td
                class="table-cell-expand-smaller text-left"
              >
                4 hours ago
              </td>
              <td
                class="table-cell-expand-smaller text-left"
              >
                4 hours ago
              </td>
              <td
                class=""
              >
                <div
                  class="dropdown dropdown-action"
                >
                  <button
                    class="dropdown-toggle page-link btn btn-unstyled"
                    style=""
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-ellipsis-v"
                      role="presentation"
                    >
                      <use
                        xlink:href="#ellipsis-v"
                      />
                    </svg>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="popover undefined mw-100 hide"
  >
    <div
      class="arrow"
    />
    <div
      class="border-0 popover-header"
    >
      <h4
        class="m-0"
      >
        new-custom-object
      </h4>
    </div>
    <div
      class="popover-body"
    >
      <form>
        <div
          class="form-group  mb-2"
        >
          <label
            for="customObjectNameInput"
          >
            name
            <span
              class="reference-mark"
            >
              <svg
                class="lexicon-icon lexicon-icon-asterisk"
                role="presentation"
              >
                <use
                  xlink:href="#asterisk"
                />
              </svg>
            </span>
          </label>
          <input
            class="form-control form-control"
            id="customObjectNameInput"
            type="text"
          />
        </div>
        <div
          class="custom-control custom-checkbox"
        >
          <label>
            <input
              aria-label="continue-and-create-form-view"
              checked=""
              class="custom-control-input"
              type="checkbox"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                continue-and-create-form-view
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="popover-footer"
    >
      <div
        class="border-top p-3"
        style="width: 450px;"
      >
        <div
          class="d-flex justify-content-end"
        >
          <button
            class="mr-3 btn btn-sm btn-secondary"
            type="button"
          >
            cancel
          </button>
          <button
            class="btn btn-sm btn-primary"
            type="button"
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListCustomObject renders with empty state and create new object with checkbox dismarked 1`] = `
<DocumentFragment>
  <div
    class="tools-control-group"
  >
    <div
      class="control-menu-level-1-heading"
    >
      javax.portlet.title.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet
    </div>
  </div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link btn btn-unstyled"
              disabled=""
              style=""
              type="button"
            >
              <span
                class="navbar-breakpoint-down-d-none"
              >
                filter-and-order
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#caret-bottom"
                  />
                </svg>
              </span>
              <span
                class="navbar-breakpoint-d-none"
              >
                <svg
                  class="lexicon-icon lexicon-icon-filter inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#filter"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-down-active btn btn-monospaced btn-unstyled"
            data-title="reverse-sort-direction"
            disabled=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="search"
                  class="form-control input-group-inset input-group-inset-after"
                  disabled=""
                  placeholder="search..."
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="#search"
              />
            </svg>
          </button>
        </li>
        <li
          class="nav-item"
        >
          <div>
            <button
              class="nav-btn nav-btn-monospaced btn btn-monospaced btn-primary"
              data-title="new-custom-object"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="taglib-empty-result-message"
  >
    <div
      class="text-center"
    >
      <div
        class="taglib-empty-state"
      />
      <h1
        class="taglib-empty-result-message-title"
      >
        there-are-no-custom-objects-yet
      </h1>
      <p
        class="empty-message-color taglib-empty-result-message-description"
      >
        custom-objects-define-the-types-of-data-your-business-application-needs
      </p>
      <button
        class="btn btn-secondary"
        type="button"
      >
        new-custom-object
      </button>
    </div>
  </div>
  <div
    class="popover undefined mw-100"
    style="top: 0px; left: 0px;"
  >
    <div
      class="arrow"
    />
    <div
      class="border-0 popover-header"
    >
      <h4
        class="m-0"
      >
        new-custom-object
      </h4>
    </div>
    <div
      class="popover-body"
    >
      <form>
        <div
          class="form-group  mb-2"
        >
          <label
            for="customObjectNameInput"
          >
            name
            <span
              class="reference-mark"
            >
              <svg
                class="lexicon-icon lexicon-icon-asterisk"
                role="presentation"
              >
                <use
                  xlink:href="#asterisk"
                />
              </svg>
            </span>
          </label>
          <input
            class="form-control form-control"
            id="customObjectNameInput"
            type="text"
          />
        </div>
        <div
          class="custom-control custom-checkbox"
        >
          <label>
            <input
              aria-label="continue-and-create-form-view"
              checked=""
              class="custom-control-input"
              type="checkbox"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                continue-and-create-form-view
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="popover-footer"
    >
      <div
        class="border-top p-3"
        style="width: 450px;"
      >
        <div
          class="d-flex justify-content-end"
        >
          <button
            class="mr-3 btn btn-sm btn-secondary"
            type="button"
          >
            cancel
          </button>
          <button
            class="btn btn-sm btn-primary"
            type="button"
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListCustomObject renders with empty state and create new object with checkbox marked 1`] = `
<DocumentFragment>
  <div
    class="tools-control-group"
  >
    <div
      class="control-menu-level-1-heading"
    >
      javax.portlet.title.com_liferay_app_builder_web_internal_portlet_CustomObjectsPortlet
    </div>
  </div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link btn btn-unstyled"
              disabled=""
              style=""
              type="button"
            >
              <span
                class="navbar-breakpoint-down-d-none"
              >
                filter-and-order
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#caret-bottom"
                  />
                </svg>
              </span>
              <span
                class="navbar-breakpoint-d-none"
              >
                <svg
                  class="lexicon-icon lexicon-icon-filter inline-item inline-item-after"
                  role="presentation"
                >
                  <use
                    xlink:href="#filter"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-down-active btn btn-monospaced btn-unstyled"
            data-title="reverse-sort-direction"
            disabled=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="search"
                  class="form-control input-group-inset input-group-inset-after"
                  disabled=""
                  placeholder="search..."
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="#search"
              />
            </svg>
          </button>
        </li>
        <li
          class="nav-item"
        >
          <div>
            <button
              class="nav-btn nav-btn-monospaced btn btn-monospaced btn-primary"
              data-title="new-custom-object"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="taglib-empty-result-message"
  >
    <div
      class="text-center"
    >
      <div
        class="taglib-empty-state"
      />
      <h1
        class="taglib-empty-result-message-title"
      >
        there-are-no-custom-objects-yet
      </h1>
      <p
        class="empty-message-color taglib-empty-result-message-description"
      >
        custom-objects-define-the-types-of-data-your-business-application-needs
      </p>
      <button
        class="btn btn-secondary"
        type="button"
      >
        new-custom-object
      </button>
    </div>
  </div>
  <div
    class="popover undefined mw-100"
    style="top: 0px; left: 0px;"
  >
    <div
      class="arrow"
    />
    <div
      class="border-0 popover-header"
    >
      <h4
        class="m-0"
      >
        new-custom-object
      </h4>
    </div>
    <div
      class="popover-body"
    >
      <form>
        <div
          class="form-group  mb-2"
        >
          <label
            for="customObjectNameInput"
          >
            name
            <span
              class="reference-mark"
            >
              <svg
                class="lexicon-icon lexicon-icon-asterisk"
                role="presentation"
              >
                <use
                  xlink:href="#asterisk"
                />
              </svg>
            </span>
          </label>
          <input
            class="form-control form-control"
            id="customObjectNameInput"
            type="text"
          />
        </div>
        <div
          class="custom-control custom-checkbox"
        >
          <label>
            <input
              aria-label="continue-and-create-form-view"
              checked=""
              class="custom-control-input"
              type="checkbox"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                continue-and-create-form-view
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="popover-footer"
    >
      <div
        class="border-top p-3"
        style="width: 450px;"
      >
        <div
          class="d-flex justify-content-end"
        >
          <button
            class="mr-3 btn btn-sm btn-secondary"
            type="button"
          >
            cancel
          </button>
          <button
            class="btn btn-sm btn-primary"
            type="button"
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
